--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container"><a class="navbar-brand logo" href="#">Brand</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects-grid-cards.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="cv.html">CV</a></li>
                     <li class="nav-item"><a class="nav-link" href="hire-me.html">Hire me</a></li>
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="avatar" style="background-image:url(&quot;/assets/img/avatars/avatar.jpg?h=a6dc828db199f191db08f91d9df2b728&quot;);"></div>
                 <div class="about-me">
-                    <p>Hello! I am <strong>John Smith</strong>. I work as interface and front end developer. I have passion for pixel perfect, minimal and easy to use interfaces.</p><a class="btn btn-outline-primary" role="button" href="#">Hire me</a>
+                    <p>Hello! I am <strong>Kazi Tanvirul Islam Sakib</strong>. I work as interface and front end developer. I have passion for pixel perfect, minimal and easy to use interfaces.</p><a class="btn btn-outline-primary" role="button" href="hire-me.html">Hire me</a>
                 </div>
             </div>
         </section>
@@ -45,7 +45,7 @@
         <section class="portfolio-block call-to-action border-bottom">
             <div class="container">
                 <div class="d-flex justify-content-center align-items-center content">
-                    <h3>Like what you see?</h3><button class="btn btn-outline-primary btn-lg" type="button">Hire me</button>
+                    <h3>Like what you see?</h3><button class="btn btn-outline-primary btn-lg" type="button"><a href="hire-me.html">Hire me</a></button>
                 </div>
             </div>
         </section>
@@ -108,7 +108,7 @@
     <footer class="page-footer">
         <div class="container">
             <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
-            <div class="social-icons"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-instagram-outline"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a></div>
+            <div class="social-icons"><a href="https://www.facebook.com/Skuiddush"><i class="icon ion-social-facebook"></i></a><a href="https://www.instagram.com/kti_sakib/"><i class="icon ion-social-instagram-outline"></i></a><a href="https://twitter.com/kti_sakib"><i class="icon ion-social-twitter"></i></a></div>
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
